# websocket-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  check_env.ps1
client/: CMakeLists.txt
client/include/ws_client/: client.hpp  client_config.hpp
client/src/: client.cpp
cmake/: FindWebSocketpp.cmake
common/: CMakeLists.txt
common/include/ws_common/: interface.hpp  logger.hpp
common/src/: logger.cpp
console_client/: CMakeLists.txt
console_client/src/: main.cpp
core/: CMakeLists.txt
core/include/ws_core/: connection.hpp
core/src/: connection.cpp
server/: CMakeLists.txt
server/include/ws_server/: server.hpp
server/src/: main.cpp  server.cpp
